--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-carte></app-carte>
+<nav>
+  <a routerLink="/hello" routerLinkActive="active">Accueil</a>
+  <a routerLink="/deck" routerLinkActive="active">Deck</a>
+  <a routerLink="/boutique" routerLinkActive="active">Boutique</a>
+</nav>
+<router-outlet></router-outlet>
