--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<a class="navbar-brand" href="#">Navbar</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item">
-				<a routerLink="/deck" routerLinkActive="active">Deck</a>
-			</li>
-			<li class="nav-item">
-				<a routerLink="/boutique" routerLinkActive="active">Boutique</a>
-			</li>
-			<ul>
-	</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #fffbbd;">
+	<a class="navbar-brand" routerLink="/deck" routerLinkActive="active">
+		<img src="https://upload.wikimedia.org/wikipedia/commons/9/98/International_Pok%C3%A9mon_logo.svg" width="30" alt="Logo Pokemon">
+  </a>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link" routerLink="/deck" routerLinkActive="active">Deck</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" routerLink="/boutique" routerLinkActive="active">Boutique</a>
+				</li>
+			</ul>
+		</div>
 </nav>
 <router-outlet></router-outlet>
